...
                                    <constraint firstAttribute="height" constant="60" id="kt2-Jh-ryN"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5EV-ch-bKd">
                                <rect key="frame" x="24" y="700" width="345" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="5di-wn-lYo"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
...
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                    <color key="textColor" name="YP White"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cuq-mB-1cD">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LikeSymbol"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="0uz-79-tjx"/>
                                                        <constraint firstAttribute="width" secondItem="cuq-mB-1cD" secondAttribute="height" multiplier="1:1" id="ycQ-Md-cnG"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="noLike"/>
...
                                <connections>
                                    <action selector="didTapShare:" destination="6SL-e3-CHb" eventType="touchUpInside" id="Huf-I3-zV2"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oSG-Je-SYP" userLabel="Back">
                                <rect key="frame" x="0.0" y="63" width="65" height="44"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackFromSingleImage"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="bJz-bZ-mpg"/>
                                    <constraint firstAttribute="width" constant="65" id="tYQ-iw-YAC"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
...
