...
        }
        let viewController = SplashViewController()
        window.rootViewController = viewController
    }
    
    func makeAlert() {
        let alert = UIAlertController(title: "Пока, пока", message: "Точно хотите выйти?", preferredStyle: .alert)
        
        let actionNo = UIAlertAction(title: "Нет", style: .default)
        alert.addAction(actionNo)
        
        let actionYes = UIAlertAction(title: "Да", style: .default) { [weak self] _ in
            guard let self = self else { return }
            self.tokenSetNil()
            self.clean()
            self.createNextWindow()
        }
        alert.addAction(actionYes)
...
