...
    
    override func viewDidLoad() {
        super.viewDidLoad()
        tableView.contentInset = UIEdgeInsets(top: 12, left: 0, bottom: 12, right: 0)
        // var contentInset: UIEdgeInsets { get set }
        // The custom distance that the content view is inset(вставка) from the safe area or scroll view edges.
        tableView.accessibilityIdentifier = "TableWithImages"
        NotificationCenter.default.addObserver(
             forName: ImagesListService.didChangeNotification,
                 object: nil,
                 queue: .main
             ) {  [weak self] _ in
                 guard let self = self else { return }
...
